<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/appid" />
		<EditText android:id="@+id/appid" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

	<Spinner
		android:id="@+id/Spinner"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:drawSelectorOnTop="true"
		android:prompt="@string/app_version_prompt">
	</Spinner>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button android:id="@+id/save" 
		  android:text="@string/save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	
		<Button android:id="@+id/delete" 
		  android:text="@string/delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			
		<Button android:id="@+id/cancel" 
		  android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>